--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -4,6 +4,8 @@
 	<title>
 			Google Maps, Webworker, Node.js and socket io
 	</title>
+	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
+
 	 <style type="text/css">
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
