--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -31,164 +31,50 @@
       	   var streetviewViewListener;
       	   var isStreetViewInitialized;
       	   var streetviewPovListener;
+      	   var initialLatLng;
+      	   var marker;
 
 	      function initialize() {
+	      	initialLatLng = new google.maps.LatLng(42.39, -71.27);
 	        var mapOptions = {
-	          center: new google.maps.LatLng(-34.397, 150.644),//change to boston....
-	          zoom: 8,
+	          center: initialLatLng,
+	          zoom: 10,
 	          mapTypeId: google.maps.MapTypeId.TERRAIN
 	        };
 	        map = new google.maps.Map(document.getElementById("map-canvas"),
 	            mapOptions);
+
+	        marker = new google.maps.Marker({
+		      position: initialLatLng,
+		      map: map
+		 	 });
 
 		    
 	  		
 
 	  		
 
-	      } //end initialize
+	      } 
 
-	      // function emitEvents(){
-	      // 	socket.emit('map_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId()});
-	      // }
+	     google.maps.event.addDomListener(window, 'load', initialize);
 
-	      // function emitStreetViewEvents(data){
-
-	      // 	console.log('emitStreetViewEvents: ' + JSON.stringify(data));
-	      //   console.log(' streetview visibility value::' + thePanorama.getVisible());
-	      // 	var streetviewVisibility = false;
-	      // 	streetviewVisibility = thePanorama.getVisible();
-
-	      // 	socket.emit('streetview_event', { zoom: map.getZoom(), lat: map.getCenter().lat(), lng: map.getCenter().lng(), type: map.getMapTypeId(), streetview: streetviewVisibility, panoramaData: data});
-
-	      // }
-
-	      google.maps.event.addDomListener(window, 'load', initialize);
+	     
 
 
 		var socket = io.connect('http://107.21.207.8:8080/');
-		// var socket = io.connect('http://localhost');
-		  
-		// map events
-		   socket.on('map_event', function (data) {
-                   var latlng = data.split(',');
+		socket.on('map_event', function (data) {
+	        var latlng = data.split(',');
 		    console.log("map_event received: " + JSON.stringify(data));
-                    console.log("data lat: "  + data +  " long" + data[1]);
-		  	map.setCenter(new google.maps.LatLng(latlng[0], latlng[1]));
-		  //	map.setZoom(data.zoom);
-		 //  	//remove the typechangelistener 
-		 //    google.maps.event.removeListener(typeIdChangeListener);
+	        console.log("data lat: "  + data +  " long" + data[1]);
+	        var updatedLatLng = new google.maps.LatLng(latlng[0], latlng[1]);
+		  	map.setCenter(updatedLatLng);
+		  	marker.setPosition(updatedLatLng);
 
-
-			// map.setMapTypeId(data.type);
-
-			// //add it back
-			// typeIdChangeListener =   google.maps.event.addListener(map, 'maptypeid_changed', function() {
-	  // 		   	console.log('maptypeid_changed');
-			//   	 emitEvents();
-			//  });
-
-		   });
-
-		 //  //streetview events
-		 //   socket.on('streetview_event', function(data){
-		 //   	console.log('received streetview_event: ' + JSON.stringify(data));
-		 //   	removeStreetViewPositionListener();
-
-		 //    if (data.streetview){
-		 //    	console.log('streetview value is true');
-		 //    	if (data.panoramaData) {
-
-		 //    		console.log('panoramaData exists');
-		 //    		if (data.panoramaData.position){
-		 //    			console.log('position value exists');
-
-		 //    			if (!thePanorama.getVisible()){
-		 //    				console.log('panorama is not already showing');
-		 //    				console.log(' position lat: ' + data.panoramaData.position.jb  + " lng: " + data.panoramaData.position.kb);
-			// 		    	thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
-			// 				thePanorama.setZoom(1);
-			// 				map.setStreetView(thePanorama);
-			// 		   		thePanorama.setVisible(true);
-			// 		   	} else {
-			// 		   		console.log('panorama is already showing');
-			// 		   		console.log('setting position');
-			// 		   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.jb, data.panoramaData.position.kb ));
-
-			// 	   	}
-		 //   		}
-		 //    } 
-		 //   } else {
-		 //    	console.log('streetview value is not true');
-		 //    	thePanorama.setVisible(false);
-		 //   }
-
-		
-
-			// setTimeout(addStreetViewPositionListener, 1000);
-			// // setTimeout(addStreetViewPovListener, 1000);
+		});
 
 
 
-		 //   });
-		
-		  // function addStreetViewListener() {
-		  // 	streetviewChangeListener = google.maps.event.addListener(thePanorama, 'visible_changed', function() {
-	  	// 	  	console.log('visible_changed: ' + thePanorama.getVisible());
-	  	// 	  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  	// 	  	if (thePanorama.getVisible()) {
-	  	// 	     console.log('calling emitEvents');
-	  	// 	     setTimeout(
-	  	// 	   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom(), pov: thePanorama.getPov()}), 5000);
-	  	// 	   	}
-		  //    })
-
-		  // }
-
-
-		  //  function addStreetViewPositionListener() {
-		  // 	streetviewChangeListener = google.maps.event.addListener(thePanorama, 'position_changed', function() {
-	  	// 	  	console.log('position_changed: ' + thePanorama.getVisible());
-	  	// 	  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  	// 	  	if (thePanorama.getVisible()) {
-	  	// 	     console.log('calling emitEvents');
-	  	// 	     setTimeout(
-	  	// 	   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom(), pov: thePanorama.getPov()}), 5000);
-	  	// 	   	}
-		  //    })
-
-		  // }
-
-		  // function addStreetViewPovListener() {
-		  // 	 streetviewPovListener =  google.maps.event.addListener(thePanorama, 'pov_changed', function() {
-	  	// 	  	console.log('pov_changed: ' + thePanorama.getVisible());
-	  	// 	  	console.log('streetview panorama position: ' + thePanorama.getPosition() + ' zoom: ' + thePanorama.getZoom());
-	  	// 	  	if (thePanorama.getVisible()) {
-	  	// 	     console.log('calling emitEvents');
-	  	// 	     setTimeout(
-	  	// 	   	 emitStreetViewEvents({position: thePanorama.getPosition(),  zoom: thePanorama.getZoom(), pov: thePanorama.getPov()}), 5000);
-	  	// 	   	}
-		  //    })
-
-		  // }
-
-		  // function removeStreetViewPositionListener(){
-		  // 	google.maps.event.removeListener(streetviewChangeListener);
-		  // }
-
-		  // function removeStreetViewPovListener(){
-		  // 	google.maps.event.removeListener(streetviewPovListener);
-		  // }
-
-		  // function addStreetViewCloseListener(){
-		  // 	  google.maps.event.addListener(thePanorama, 'closeclick', function() {
-	  	// 	  	console.log('closeclick');
-	  	// 	  	thePanorama.setVisible(false);
-	  	// 	  	emitStreetViewEvents();
-	  	// 	  });
-		  // }
-		   
-
+	
 		 
 
 		   
