--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -38,7 +38,7 @@
 	      	initialLatLng = new google.maps.LatLng(42.39, -71.27);
 	        var mapOptions = {
 	          center: initialLatLng,
-	          zoom: 10,
+	          zoom: 18,
 	          mapTypeId: google.maps.MapTypeId.TERRAIN
 	        };
 	        map = new google.maps.Map(document.getElementById("map-canvas"),
@@ -46,7 +46,16 @@
 
 	        marker = new google.maps.Marker({
 		      position: initialLatLng,
-		      map: map
+		      map: map,
+		       icon: {
+			    path: google.maps.SymbolPath.CIRCLE,
+			    fillOpacity: 0.5,
+			    fillColor: 'ff0000',
+			    strokeOpacity: 1.0,
+			    strokeColor: 'fff000',
+			    strokeWeight: 3.0, 
+			    scale: 20 //pixels
+			  }
 		 	 });
 
 		    
