--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -14,7 +14,7 @@
 
     <!-- load google maps -->
      <script type="text/javascript"
-      	src="https://maps.googleapis.com/maps/api/js?sensor=false">
+      	src="https://maps.googleapis.com/maps/api/js?sensor=false&key=AIzaSyCnazeNe_GGecl_UIFkSyWXWoq3Sh-N0_Y">
      </script>
 
      <script src="/socket.io/socket.io.js"></script>
