google maps issue

--- a/demo-2/views/index.html
+++ b/demo-2/views/index.html
@@ -119,15 +119,15 @@
 		    			if (!thePanorama.getVisible()){
 		    				console.log('panorama is not already showing');
 		    				console.log(' position lat: ' + data.panoramaData.position[0]  + " lng: " + data.panoramaData.position[1]);
-					    	thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.lb, data.panoramaData.position.mb));
+					    	thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.mb, data.panoramaData.position.nb));
 							thePanorama.setZoom(1);
 							map.setStreetView(thePanorama);
 					   		thePanorama.setVisible(true);
 					   	} else {
 					   		console.log('panorama is already showing');
 					   		console.log('setting position');
-					   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.lb, 
-					   			data.panoramaData.position.mb));
+					   		thePanorama.setPosition(new google.maps.LatLng(data.panoramaData.position.mb, 
+					   			data.panoramaData.position.nb));
 
 				   	}
 		   		}
