more server side and client side logging

--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -87,10 +87,10 @@
 		var socket = io.connect(stagingIP);
 		socket.on('map_event', function (data) {
 	        var latlng = data.split(',');
-		    console.log("map_event received: " + JSON.stringify(data));
-	        console.log("data lat: "  + data +  " long" + data[1]);
+		    // console.log("map_event received: " + JSON.stringify(data));
+	        console.log("data lat: "  + latLng[0] +  " long" + latLng[1]);
 	        var updatedLatLng = new google.maps.LatLng(latlng[0], latlng[1]);
-	        var updatedContentString = "Location: lat:" + updatedLatLng.lat() + " lng:" + updatedLatLng.lng() + "<br />";
+	        var updatedContentString = "Location <br> lat:" + latlng[0] + "<br> lng:" + latlng[1] + "<br />";
 		  	// map.setCenter(updatedLatLng);
 		  	marker.setPosition(updatedLatLng);
 		  	infowindow.setContent(updatedContentString);
