--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -70,9 +70,9 @@
 		   	});
 		    infowindow.open(map, marker);
 		    
-		 //    google.maps.event.addListener(marker, 'click', function() {
- 		// 		 infowindow.open(map,marker);
-			// });
+		    google.maps.event.addListener(marker, 'click', function() {
+ 				 infowindow.open(map,marker);
+			});
 
 	  		
 
