--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -10,6 +10,7 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% }
+      #content {overflow: hidden;}
     </style>
 
     <!-- load google maps -->
@@ -48,7 +49,7 @@
 	          mapTypeId: google.maps.MapTypeId.TERRAIN
 	        };
 
-	        contentString += "<p>Location <br> lat:" + initialLatLng.lat() + " <br> lng:" + initialLatLng.lng() + "<br /></p>";
+	        contentString += "<div id = "#content"><p>Location <br> lat:" + initialLatLng.lat() + " <br> lng:" + initialLatLng.lng() + "<br /></p><";
 
 	        map = new google.maps.Map(document.getElementById("map-canvas"),
 	            mapOptions);
