added jquery support

--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -115,7 +115,7 @@
 		  	// map.setCenter(updatedLatLng);
 		  	marker.setPosition(updatedLatLng);
 		  	map.setCenter(updatedLatLng);
-		  	infowindow.setContent(contentString);
+		  	infowindow.setContent(contentString[0]);
 
 
 		});
