--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -10,8 +10,8 @@
       html { height: 100% }
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% ;     
-      				line-height:normal !important;}
-      #content {
+      			}
+      #infowin-content {
       	
 
       }
@@ -77,6 +77,7 @@
 		 	 });
 
 		    infowindow = new google.maps.InfoWindow({
+		    	maxWidth: 400px;
 		   	});
 		    // infowindow.open(map, marker);
 
