--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -77,7 +77,7 @@
 		 	 });
 
 		    infowindow = new google.maps.InfoWindow({
-		    	maxWidth: 400px;
+		    	maxWidth: 400;
 		   	});
 		    // infowindow.open(map, marker);
 
