--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -12,7 +12,7 @@
       #map-canvas { height: 100% ;     
       			}
       #infowin-content {
-      	
+      	min-width: 400px;
 
       }
     </style>
