--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -57,7 +57,7 @@
 	        };
 
 	        //contentString = 'Phone Number:  Latitude: 42.39 Longitude: -71.27';
-	         contentString = $("<div class='infowin-content'>Phone Number: unknown <br>"+ " Latitude: " + initialLatLng.lat() + "<br> Longitude: " + initialLatLng.lng() + " </div>");
+	         contentString = $("<div class='infowin-content'>Phone Number: unknown"+ " Latitude: " + initialLatLng.lat() + " Longitude: " + initialLatLng.lng() + " </div>");
 
 	        map = new google.maps.Map(document.getElementById("map-canvas"),
 	            mapOptions);
@@ -104,8 +104,8 @@
 		    // console.log("map_event received: " + JSON.stringify(data));
 	        console.log("data lat: "  + latlng[0] +  " long" + latlng[1]);
 	        var updatedLatLng = new google.maps.LatLng(latlng[0], latlng[1]);
-	        contentString = $("<div class='infowin-content'>Phone Number: unknown <br>"+ " Latitude: " 
-	        				+ latlng[0] + "<br> Longitude: " + latlng[1] + " </div>");
+	        contentString = $("<div class='infowin-content'>Phone Number: unknown"+ " Latitude: " 
+	        				+ latlng[0] + "Longitude: " + latlng[1] + " </div>");
 
 		  	// map.setCenter(updatedLatLng);
 		  	marker.setPosition(updatedLatLng);
