--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -11,9 +11,9 @@
       body { height: 100%; margin: 0; padding: 0 }
       #map-canvas { height: 100% ;     
       			}
-      #infowin-content {
+      .infowin-content {
       	min-width: 400px;
-
+      	
       }
     </style>
 
