more css changes

--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -12,8 +12,9 @@
       #map-canvas { height: 100% ;     
       			}
       .infowin-content {
-      	min-width: 400px;
-      	
+      	min-width: 400px !important;
+      	min-height: 300px !important;
+
       }
     </style>
 
