--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -12,6 +12,7 @@
       #map-canvas { height: 100% ;     
       			}
       .infowin-content {
+      	min-width: 150px !important;
       	min-height: 100px !important;
 
       }
