show phone number

--- a/demo-3/views/index.html
+++ b/demo-3/views/index.html
@@ -101,12 +101,12 @@
 
 		var socket = io.connect(stagingIP2);
 		socket.on('map_event', function (data) {
-	        var latlng = data.split(',');
+	        var parseData = data.split(',');
 		    // console.log("map_event received: " + JSON.stringify(data));
-	        console.log("data lat: "  + latlng[0] +  " long" + latlng[1]);
+	        console.log("data lat:"  + parseData[0] +  " long:" + parseData[1] + " phoneNumber:" + parseData[2]);
 	        var updatedLatLng = new google.maps.LatLng(latlng[0], latlng[1]);
-	        contentString = $("<div class='infowin-content'>Phone Number: unknown <br> "+ " Latitude: " 
-	        				+ latlng[0] + "<br> Longitude: " + latlng[1] + "<br> </div>");
+	        contentString = $("<div class='infowin-content'>Phone Number: unknown <br> "+ parseData[2] + " Latitude: " 
+	        				+ parseData[0] + "<br> Longitude: " + parseData[1] + "<br> </div>");
 
 		  	// map.setCenter(updatedLatLng);
 		  	marker.setPosition(updatedLatLng);
